syntax = "proto3";

package calc;

message SumRequest{
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse{
    int32 sum_result = 1;
}

message PrimeNumberDecompositionRequest{
    int32 number = 1;
}

message PrimeNumberDecompositionResponse{
    int32 decomposition_result = 1;
}

service calcService{
    rpc Sum (SumRequest) returns (SumResponse);

    rpc PrimeNumberDecomposition (PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse);
}