syntax = "proto3";

package greet;

message Greeting{
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest{
    Greeting greeting = 1;
}

message GreetStreamRequest{
    Greeting greeting = 1;
}

message GreetResponse{
    string result = 1;
}

message GreetStreamResponse{
    string result = 1;
}

service GreetService{
    // Unary API
    rpc Greet(GreetRequest) returns(GreetResponse){};

    // Stream API
    rpc GreetStream(GreetStreamRequest) returns (stream GreetStreamResponse){};
}